# tractobots

./: .ament_cpplint  .ament_uncrustify  .gitattributes  CHANGELOG.md  CMakePresets.json  CONTRIBUTORS.md  DASHBOARD_ORGANIZATION_SUMMARY.md  DASHBOARD_README.md  DASHBOARD_READY.md  GETTING_STARTED.md  JOHN_DEERE_GPS_GUIDE.md  LICENSE  NEXT_STEPS_ROADMAP.md  PROBLEMS_FIXED.md  README.md  README_AUTONOMY_PLAN.md  README_COMPLETE_SYSTEM.md  REDUNDANT_FILES_CLEANUP.md  SETUP_STATUS.md  SETUP_SUCCESS.md  SHELLCHECK_FIX.md  Setup-WSL-PortForwarding.ps1  build_dashboard.py  build_workspace.sh  check_dashboard_status.py  comprehensive_test.py  dashboard_launcher.html  demo_john_deere_data.xml  demo_shapefile_integration.py  diagnose_env.py  diagnose_problems.py  enhanced_dashboard.py  enhanced_realtime_dashboard.py  fix_all_problems.sh  gazebo_installation_guide.md  gazebo_integration_test_results.json  gui_requirements.txt  install_gui.sh  install_ros2.sh  install_ros2_humble.sh  (+46 more)
.devcontainer/: README.md
.github/ISSUE_TEMPLATE/: accident_report.md  bug_report.md  config.yml  improvement_report.md
.github/Workflows/: Ros2-ci.yml
.github/chatmodes/: debug.chatmode.md
.github/workflows/: arduino-ci.yml  ci.yml  debian-release.yml  ros2-ci.yml
Arduino-JD6330/: README.md
Arduino-MT765/: README.md
cfg/: uncrustify_ros2.cfg
dashboard/: README.md  __init__.py  __main__.py  dashboard.py  launcher.py
dashboard/scripts/: README.md  __init__.py  launch_dashboard.bat
dashboard/tests/: README.md  __init__.py  integration_test.py  simple_dashboard.py
dashboard/utils/: README.md  Setup-WSL-PortForwarding.ps1  __init__.py  cleanup_redundant_files.py  setup_wsl_port_forwarding.bat  wsl_port_forwarding.py
docker/: aarch64-opencv.dockerfile
docs/: CLEANUP_SUMMARY.md  CODEX_GUIDE.md  GCODE_GENERATOR.md  NODE_REFERENCES.md  README.md  USAGE_GUIDE.md
docs/archive/: DESKTOP_APP_README.md  DESKTOP_APP_STATUS.md  FIXES_SUMMARY.md  GAZEBO_INTEGRATION_GUIDE.md  GAZEBO_INTEGRATION_STATUS.md  GAZEBO_MISSION_ACCOMPLISHED.md  GUI_COMPLETE.md  GUI_GUIDE.md  PYTHON_IMPORTS_FIX.md  README_DASHBOARD_SETUP.md  README_backup.md  READY_TO_RUN.md  SETUP_COMPLETE.md  SHAPEFILE_GUIDE.md  SHAPEFILE_STATUS_REPORT.md  (+1 more)
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md
mixins/: colcon-defaults.yaml
output_test/: ros2_guidance_lines_20250702_024501.yaml  tractobots_gps_20250702_024501.json
src/Advancednavigation/: CMakeLists.txt  package.xml
src/Advancednavigation/Src/: spatial_packets.c
src/Advancednavigation/Src/NTRIP_Client/: README
src/Advancednavigation/Src/NTRIP_Client/NTRIP/: Gpl  ntripclient.c
src/Advancednavigation/Src/rs232/: rs232.c
src/Advancednavigation/launch/: ins_driver.launch.py
src/AgIsoStackPlusPlus/: CMakeLists.txt  package.xml
src/AgIsoStackPlusPlus/include/: Arduino.h
src/AgIsoStackPlusPlus/include/isobus/hardware_integration/: can_hardware_interface.hpp  socket_can_interface.hpp
src/AgIsoStackPlusPlus/include/isobus/utility/: event_dispatcher.hpp  lock_free_queue.hpp  processing_flags.hpp  system_timing.hpp  thread_synchronization.hpp  to_string.hpp
src/AgIsoStackPlusPlus/src/utility/: thread_synchronization.cpp
src/Gcode_parser/: CMakeLists.txt  package.xml
src/Gcode_parser/Include/: coordinate_conversion.h  gcode_parser.h  gcode_phaser.hpp  gcode_reader_node.hpp
src/Gcode_parser/Src/: coordinate_conversion.cpp  gcode_parser.cpp  gcode_reader_node.cpp
src/Gcode_parser/tests/: test_coordinate_conversion.cpp  test_gcode_parser.cpp
src/Gcode_parser/tests/data/: comments.gcode  plow.gcode  sample.gcode
src/Iso_bus_watchdog/: CMakeLists.txt  package.xml
src/Iso_bus_watchdog/src/: iso_bus_watchdog_node.cpp
src/agisostack_plus_plus/: CMakeLists.txt  package.xml
src/agisostack_plus_plus/include/isobus/isobus/: can_identifier.hpp
src/agisostack_plus_plus/include/isobus/utility/: data_span.hpp  system_timing.hpp
src/agisostack_plus_plus/src/Isobus/isobus/: can_identifier.cpp
src/iso_bus_watchdog/: CMakeLists.txt  package.xml
src/iso_bus_watchdog/launch/: isobus_watchdog.launch.py
src/tractobots_bridges/: CMakeLists.txt  package.xml
src/tractobots_bridges/src/: agopengps_bridge.cpp  nmea_bridge.cpp
src/tractobots_bringup/: CMakeLists.txt  package.xml  setup.py
src/tractobots_bringup/config/: default.yaml
src/tractobots_bringup/launch/: bringup.launch.py  tractobots.launch.py
src/tractobots_bringup/tractobots_bringup/: system_test.py
src/tractobots_control/: CMakeLists.txt  package.xml
src/tractobots_control/src/: controller_node.cpp
src/tractobots_core/: CMakeLists.txt  package.xml
src/tractobots_core/src/: e_stop_node.cpp
src/tractobots_description/: CMakeLists.txt  package.xml
src/tractobots_description/launch/: tractobots_tf_tree.launch.py
src/tractobots_gps/: CMakeLists.txt  package.xml  setup.py
src/tractobots_gps/tractobots_gps/: NV08C_node.py
src/tractobots_launchers/: CMakeLists.txt  MANIFEST.in  package.xml  setup.py
src/tractobots_launchers/launch/: bringup.launch.py  mapviz.launch.py  pose_tf.launch.py
src/tractobots_launchers/resource/: tractobots_launchers
src/tractobots_mission_ui/: CMakeLists.txt  package.xml  setup.py
src/tractobots_mission_ui/templates/: dashboard.html
src/tractobots_mission_ui/tractobots_mission_ui/: __init__.py  desktop_app.py  enhanced_gui.py  field_boundary_service.py  gui_launcher.py  mission_gui_node.py  mission_ui_node.py  qt_gui.py  qt_gui_fixed.py  qt_gui_old.py  shapefile_gui.py  shapefile_manager.py  web_dashboard.py
src/tractobots_nav2/: package.xml  setup.py
src/tractobots_nav2/launch/: nav2.launch.py
src/tractobots_nav2/params/: nav2.yaml
src/tractobots_navigation/: CMakeLists.txt  MANIFEST.in  package.xml  setup.py
src/tractobots_navigation/tests/: test_driver_utils.py
src/tractobots_navigation/tractobots_navigation/: __init__.py  driver.py
src/tractobots_planning/: CMakeLists.txt  package.xml
src/tractobots_planning/src/: planner_node.cpp
temp_shapefile_demo/: demo_fields.dbf  demo_fields.shp  demo_fields.shx
(+19 files in other folders)
