<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2-driver</name>
  <version>2.0.1</version>
  <description>Advanced Navigation ROS 2 Driver</description>
  <maintainer email="support@advancednavigation.com">Support</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- ★ Codex-edit -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <!-- ★ Codex-edit removed redundant depend -->
  <depend>geometry_msgs</depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <build_depend>diagnostic_msgs</build_depend> <!-- ★ Codex-edit (new) -->
  <exec_depend>diagnostic_msgs</exec_depend> <!-- ★ Codex-edit (new) -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_test</test_depend>
  <exec_depend>ament_lint_auto</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
