<?xml version="1.0"?>
<package format="3">
  <name>AgIsoStackPlusPlus</name>
  <version>0.1.0</version>
  <description>Vendor library wrapper for AgIsoStack++</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- ★ Codex-edit -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
