<?xml version="1.0"?>
<package format="3">
  <name>gcode_parser</name>
  <version>0.1.1</version>
  <description>G-code parser library and reader node.</description>
  <maintainer email="KylerLaird@todo.com">Kyler Laird</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_test</test_depend>
  <exec_depend>ament_lint_auto</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
