<?xml version="1.0"?>
<package format="3">
  <name>iso_bus_watchdog</name>
  <version>0.1.0</version>
  <description>ISOBUS Watchdog Node using AgIsoStack++</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>isobus</depend>
</package>
