<?xml version="1.0"?>
<package format="3">
  <name>agisostack_plus_plus</name>
  <version>0.1.0</version>
  <description>Vendor library wrapper for AgIsoStack++</description>
  <maintainer email="nicholasbass@crop-crusaders.com">Nicholas Bass</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- ★ Codex-edit -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
