<?xml version="1.0"?>
<package format="3">
  <name>iso_bus_watchdog</name>
  <version>0.1.0</version>
  <description>ISOBUS Watchdog Node using AgIsoStack++</description>
  <maintainer email="nckbass218@gmail.com">Nicholas Bass</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend> <!-- ★ Codex-edit -->

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <build_depend>agisostack_plus_plus</build_depend> # ★ Codex-edit
  <exec_depend>agisostack_plus_plus</exec_depend> # ★ Codex-edit

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
