<?xml version="1.0"?>
<package format="3">
  <name>tractobots_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for bringing up Tractobots sensors and safety nodes</description>

  <maintainer email="nckbass218@gmail.com">Nicholas Bass</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>tractobots_robot_localization</exec_depend>
  <exec_depend>tractobots_navigation</exec_depend>
  <exec_depend>iso_bus_watchdog</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
