<?xml version="1.0"?>
<package format="3">
  <name>tractobots_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configuration for TractoBots.</description>
  <maintainer email="maintainer@example.com">TractoBots</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>tractobots_core</depend>
  <depend>tractobots_vehicle</depend>
  <depend>tractobots_planning</depend>
  <depend>tractobots_control</depend>
  <depend>tractobots_bridges</depend>
  <export>
  </export>
</package>
