<?xml version="1.0"?>
<package format="3">
  <name>tractobots_core</name>
  <version>0.0.1</version>
  <description>Core utilities including E-stop and diagnostics.</description>
  <maintainer email="maintainer@example.com">TractoBots</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>diagnostic_updater</depend>
  <depend>std_msgs</depend>
  <export>
  </export>
</package>
