<?xml version="1.0"?>
<package format="3">
  <name>tractobots_gps</name>
  <version>0.0.1</version>
  <description>
    The tractobots_gps package provides a ROS 2 interface for the NV08C GPS receiver.
  </description>

  <maintainer email="nckbass218@gmail.com">Nicholas Bass</maintainer>
  <license>GPLv3</license>

  <!-- Python-based node built with ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Linting and test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
