<?xml version="1.0"?>
<package format="3">
  <name>tractobots_launchers</name>
  <version>0.0.1</version>
  <description>Top‑level launch files that start the whole Tractobots stack.</description>

  <maintainer email="nckbass218@gmail.com">Nicholas Bass</maintainer>
  <license>GPLv3</license>

  <!-- Pure launch package built with ament_cmake -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Launch files use these packages -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tractobots_description</exec_depend>
  <exec_depend>tractobots_robot_localization</exec_depend>
  <exec_depend>tractobots_navigation</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>mapviz</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
