<?xml version="1.0"?>
<package format="3">
  <name>tractobots_nav2</name>
  <version>0.0.1</version>
  <description>Nav2 launch files and configuration for Tractobots.</description>

  <maintainer email="nckbass218@gmail.com">Nicholas Bass</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
