<?xml version="1.0"?>
<package format="3">
  <name>tractobots_navigation</name>
  <version>0.0.1</version>
  <description>Driver / tele‑op node for Tractobots</description>

  <maintainer email="KylerLaird@todo.com">Kyler Laird</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>     <!-- Joy -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Optional: visualization -->
  <exec_depend>visualization_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
